# opengl-test

./: .gitignore  .gitmodules  CMakeLists.txt
assets/shaders/: advancedGLSLBlue.frag  advancedGLSLBlue.vert  advancedGLSLFragCoord.frag  advancedGLSLFragCoord.vert  advancedGLSLGreen.frag  advancedGLSLPoints.frag  advancedGLSLPoints.vert  advancedGLSLRed.frag  advancedGLSLYellow.frag  advancedLightingBlinnPhong.frag  advancedLightingBlinnPhong.vert  blending.frag  blendingFunc.frag  colors.frag  coordinateSystem.vert  cubemaps.vert  cubemapsContainerRefract.frag  cubemapsContainerRefract.vert  depthTesting.frag  framebuffersBearMirror.vert  framebuffersPostprocessingGrayscale.frag  framebuffersPostprocessingKernelBlur.frag  framebuffersPostprocessingKernelEdgeDetection.frag  framebuffersPostprocessingKernelEdgeDetection.vert  framebuffersPostprocessingKernelSharpen.frag  framebuffersPostprocessingNegative.frag  framebuffersSimpleQuad.frag  gammaCorrection.frag  geometryShader.frag  geometryShader.geom  geometryShaderExplode.frag  geometryShaderExplode.geom  geometryShaderExplode.vert  geometryShaderNormals.geom  geometryShaderNormals.vert  gouraudLighting.frag  gouraudLighting.vert  instancingPlanet.frag  instancingPlanet.vert  instancingQuad.vert  (+15 more)
include/learnopengl/: camera.h  errorReporting.h  mesh.h  model.h  shader.h
src/: main.cpp
src/learnopengl/: camera.cpp  errorReporting.cpp  mesh.cpp  model.cpp  shader.cpp
